@@ -1,3 +1,10 @@
 *.dll
 *.exe
+config.*
+*.m4
+libtool
+ltconfig
+ltmain.sh
+stamp*
+configure
 
