@@ -1,0 +1,6 @@
+*.lo
+*.la
+Makefile.in
+Makefile
+.deps
+.libs
