@@ -1,3 +1,12 @@
+2002-04-25  Mike Kestner <mkestner@speakeasy.net>
+
+	* autogen.sh : simple config for the glue build
+	* configure.in : simple config for the glue build
+	* makefile : add glue dir to build
+	* glib/SList.cs : Fix some leakage.
+	* glue/value.c : a helper function for heap alloc of GValues
+	* glue/Makefile.am : build for libgtksharpglue
+	
 2002-04-19  Mike Kestner <mkestner@speakeasy.net>
 
 	* glib/SList.cs : A more sane approach.
